--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "sass": "^1.80.4"
   },
   "lint-staged": {
     "**/*.+(ts|vue|js|md)": [
