--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "moment": "^2.30.1",
     "next": "15.0.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "tailwind-merge": "^2.5.4"
   },
   "lint-staged": {
     "**/*.+(ts|vue|js|md)": [
